@@ -63,16 +63,16 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 517)
-(Parent-Version lpmud 3-3 516)
+(Project-Version lpmud 3-3 518)
+(Parent-Version lpmud 3-3 517)
 (Version-Log "
-  - (sprintf.c) Format '%b' to print a number in binary notation (supplied
-       by Ralph - thanks!).
+  - (sprintf.c) Made the code portable to non-32-bit machines.
+  - (test/t-040413) Added a testcase for two struct lookup issues.
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Tue, 13 Apr 2004 20:32:20 -0600")
+(Checkin-Time "Tue, 13 Apr 2004 21:26:15 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -110,7 +110,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.72 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.580 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.581 644))
   (HISTORY (lpmud/f/49_HISTORY 1.344 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -302,7 +302,7 @@
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.5 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
-  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.61 644))
+  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.62 644))
   (src/strfuns.h (lpmud/b/51_strfuns.h 1.11.1.7 644))
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.16 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.23.1.7 644))
@@ -1339,7 +1339,7 @@
   (doc/efun.de/strlen.de (lpmud/g/b/0_strlen.de 1.1 640))
   (doc/efun.de/stringp.de (lpmud/t/5_stringp.de 1.1 644))
   (doc/efun.de/sscanf.de (lpmud/g/b/1_sscanf.de 1.1 640))
-  (doc/efun.de/sprintf.de (lpmud/l/36_sprintf.de 1.7 644))
+  (doc/efun.de/sprintf.de (lpmud/l/36_sprintf.de 1.8 644))
   (doc/efun.de/sqrt.de (lpmud/g/b/2_sqrt.de 1.1 640))
   (doc/efun.de/sort_array.de (lpmud/g/b/3_sort_array 1.1 640))
   (doc/efun.de/snoop.de (lpmud/g/b/4_snoop.de 1.1 640))
@@ -2209,6 +2209,9 @@
   (test/t-030925/b2.c (lpmud/e/b/31_b2.c 1.1 644))
   (test/t-030925/b1.c (lpmud/e/b/32_b1.c 1.1 644))
   (test/t-030925/a.c (lpmud/e/b/33_a.c 1.1 644))
+
+  (test/t-040413/master.c (lpmud/t/b/31_master.c 1.1 644))
+  (test/t-040413/a.c (lpmud/t/b/32_a.c 1.1 755))
 )
 (Merge-Parents)
 (New-Merge-Parents)
